# crowe-mycelium-cli

./: .gitignore  CHANGELOG.md  LICENSE  NOTICE  README.md  pyproject.toml  requirements-training.txt
crowe_mycelium/: __init__.py  branding.py  cli.py  model.py  registry.json  system_prompt.txt  tools.py
docs/: AZURE_ML_QUOTA_REQUEST.md  DEMO_SCRIPT.md  HF_MODEL_CARD.md  STATUS.md  SUBMISSION.md  VIDEO_SHOTLIST.md
eval/: questions.jsonl
modelfile/: Modelfile
notebooks/: gemma_4_mycelium_lora.ipynb  kernel-metadata.json
quantum/: ibm_molecular.py  requirements-quantum.txt
scripts/: eval_mycology.py  export_to_ollama.sh  extract_text_model.py  finetune_lora.py  finetune_lora_mlx.py  finetune_lora_modal.py  finetune_lora_unsloth.py  kernelize.py  mlx_to_ollama.sh  modal_eval.py  modal_synth.py  modal_synth_scale.py  modal_train.py  prepare_corpus.py  scrape_firecrawl.py  setup_ollama_hub.sh  shard_and_push.ps1  ship_phase1.sh  ship_phase2.sh  submit_azure_ml.py  synth_magpie.py  synth_react.py  synth_tooluse.py  synth_verify.py  synth_vision.py
scripts/video/: 01_generate_audio.py  02_extract_source_clips.sh  03_lipsync_all.sh  03b_lipsync_replicate.py  04_generate_sora_broll.py  05_assemble_film.sh  06_gfpgan_polish.py  07_recut_minimal_oncamera.sh  08_make_brand_cards.py  09_recut_branded.sh  10_polish_film.sh  11_record_act3_terminal.py  11b_record_act3_real.sh  12_recut_real_footage.sh  13_add_music_bed.sh  v10_build.py  v10_generate_audio.py  v10_make_subtitles.py  (+2 more)
shards/: magpie_0000.jsonl  manifest.json
video/: YOUTUBE_UPLOAD.md  sora-prompts.json
(+19 files in other folders)
